# pdf-sizer

./: Cargo.toml  README.md
src/: cli.rs  gui.rs  main.rs  progress.rs
src/engine/: encode.rs  mod.rs  mrc.rs  pdf.rs  preprocess.rs  segment.rs  types.rs
