[package]
name = "pdf-sizer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
pdf-writer = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "tiff", "webp"] }
mozjpeg = "0.10"
imageproc = "0.26"
openjp2 = "0.6"
fax = "0.2"
jbig2enc-rust = "0.5"
opener = "0.7"
rfd = "0.14"

[dev-dependencies]
justbig2 = "0.2"
